--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -2,35 +2,31 @@ name: Build and Push Docker Image to Docker Hub
 
 on:
   push:
-    branches: [ "dev", "main" ]
+    branches:
+      - dev
+      - main  # Assuming this corresponds to the master branch
   pull_request:
-    branches: [ "dev", "main" ]
+    branches:
+      - dev
+      - main
   schedule:
     - cron: "0 0 * * *"
 
 env:
-  # Use docker.io for Docker Hub if empty
   REGISTRY: docker.io
-  # github.repository as <account>/<repo>
   IMAGE_NAME: alexslx/noalbs
 
 jobs:
-
-  build:
-    name: Build Docker Image
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . -t ${{ env.IMAGE_NAME }}
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
 
-      - name: Set up Docker Build
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
@@ -52,3 +48,16 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+      
+      - name: Update latest tag (for main branch)
+        run: |
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          if [[ "$BRANCH_NAME" == "main" ]]; then
+            # Execute commands for main branch
+            echo "Updating latest tag on Docker Hub"
+            docker pull "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$BRANCH_NAME"
+            docker tag "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$BRANCH_NAME" "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+            docker push "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+          else
+            echo "Skipped."
+          fi
